--- a/index.qmd
+++ b/index.qmd
@@ -1,17 +1,36 @@
-![Sharing Tools and Artefacts for Reproducible Simulations in healthcare](images/stars_banner.png)
+---
+title: "![STARS: Sharing Tools and Artefacts for Reproducible and Reusable Simulations in healthcare](images/stars_banner.png)"
+pagetitle: STARS
+---
 
-This project is focused on improving the quality and impact of simulation models. Activities have helped modellers to make their models:
+```{=html}
+<div class="finisher-header" style="width:100%; height:300px;">
+  <!-- Optional: logo, nav, etc. -->
+</div>
+```
 
-Reproducible
+```{=html}
+<script src="finisher-header.es5.min.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    new FinisherHeader({
+      count: 6,
+      size: { min: 1100, max: 1300, pulse: 0 },
+      speed: { x: { min: 0.1, max: 0.3 }, y: { min: 0.1, max: 0.3 } },
+      colors: { background: "#1982ab", particles: ["#11526d", "#b7ddeb"] },
+      blending: "overlay",
+      opacity: { center: 1, edge: 0.1 },
+      skew: 0,
+      shapes: ["c"]
+    });
+  });
+</script>
+```
 
-Reusable
+hgfhfghgf
 
-Replicable
 
-We're also exploring the capabilities of large language models (LLMs) for supporting simulation modelling.
+hgfhgfhgfh
 
-LLMs
 
-We have a package to support Python simulation research.
-
-sim-tools
+hgfhgfhgf
