--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ pagetitle: STARS
 format:
   html:
     css:
-      css/buttons.css
+      - css/buttons.css
 ---
 
 The STARS project supports researchers in developing transparent, high‑impact discrete-event simulation studies in healthcare that are computationally reproducible and practically reusable. It provides structured guidance, tools, and worked examples to help teams share code, data, and documentation in ways that enable others to understand, verify, and adapt their models for new healthcare settings.
@@ -30,10 +30,71 @@ The STARS project supports researchers in developing transparent, high‑impact 
 <br>
 ```
 
-<br>
+### Meet the STARS project team
 
-> **Funding:**
->
-> The STARS project is supported by the Medical Research Council [grant number MR/Z503915/1].
->
-> Pilot work was supported by the National Institute for Health Research Applied Research Collaboration South West Peninsula. The views expressed in this website are those of the author(s) and not necessarily those of the National Institute for Health Research or the Department of Health and Social Care.
+```{=html}
+<!-- SOURCE: CodingNepal https://www.codingnepalweb.com/create-responsive-card-slider-html-javascript/ -->
+<head>
+  <!-- Linking SwiperJS CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  <!-- Linking custom CSS -->
+  <link rel="stylesheet" href="css/cardslider.css">
+</head>
+<body>
+  <div class="container swiper">
+    <div class="slider-wrapper">
+      <div class="card-list swiper-wrapper">
+        <div class="card-item swiper-slide">
+          <img src="images/tom.jpg" alt="User Image" class="user-image">
+          <p class="user-name">Tom Monks</p>
+          <p class="user-profession">Principal Investigator</p>
+          <a href="http://orcid.org/0000-0003-2631-4481" class="message-button" target="_blank">ORCID</a>
+          <a href="https://github.com/TomMonks" class="message-button" target="_blank">GitHub</a>
+        </div>
+        <div class="card-item swiper-slide">
+          <img src="images/amy.jpg" alt="User Image" class="user-image">
+          <p class="user-name">Amy Heather</p>
+          <p class="user-profession">Researcher</p>
+          <a href="https://orcid.org/0000-0002-6596-3479" class="message-button" target="_blank">ORCID</a>
+          <a href="https://github.com/amyheather" class="message-button" target="_blank">GitHub</a>
+        </div>
+        <div class="card-item swiper-slide">
+          <img src="images/alison.jpeg" alt="User Image" class="user-image">
+          <p class="user-name">Alison Harper</p>
+          <p class="user-profession">Co-Investigator</p>
+          <a href="https://orcid.org/0000-0001-5274-5037" class="message-button" target="_blank">ORCID</a>
+          <a href="https://github.com/AliHarp" class="message-button" target="_blank">GitHub</a>
+        </div>
+        <div class="card-item swiper-slide">
+          <img src="images/nav.jpeg" alt="User Image" class="user-image">
+          <p class="user-name">Nav Mustafee</p>
+          <p class="user-profession">Co-Investigator</p>
+          <a href="https://orcid.org/0000-0002-2204-8924" class="message-button" target="_blank">ORCID</a>
+          <a href="https://github.com/NavonilNM" class="message-button" target="_blank">GitHub</a>
+        </div>
+        <div class="card-item swiper-slide">
+          <img src="images/andy.jpg" alt="User Image" class="user-image">
+          <p class="user-name">Andy Mayne</p>
+          <p class="user-profession">Co-Investigator</p>
+          <a href="https://orcid.org/0000-0003-1263-2286" class="message-button" target="_blank">ORCID</a>
+          <a href="https://github.com/andy-mayne" class="message-button" target="_blank">GitHub</a>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-slide-button swiper-button-prev"></div>
+      <div class="swiper-slide-button swiper-button-next"></div>
+    </div>
+  </div>
+  <!-- Linking SwiperJS script -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- Linking custom script -->
+  <script src="javascript/script.js"></script>
+</body>
+</html>
+```
+
+### Funding
+
+The STARS project is supported by the Medical Research Council [grant number MR/Z503915/1].
+
+Pilot work was supported by the National Institute for Health Research Applied Research Collaboration South West Peninsula. The views expressed in this website are those of the author(s) and not necessarily those of the National Institute for Health Research or the Department of Health and Social Care.
