feat(publications): add heather2025 + add monks2024 DOI

--- a/pages/publications/monks2024/index.qmd
+++ b/pages/publications/monks2024/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Towards sharing tools and artefacts for reusable simulations in healthcare"
+doi: https://doi.org/10.1080/17477778.2024.2347882
 author:
   - name: Thomas Monks
     affiliation: University of Exeter Medical School
