--- a/pages/publications/monks2024/index.qmd
+++ b/pages/publications/monks2024/index.qmd
@@ -12,7 +12,7 @@ author:
     affiliation: University of Exeter Business School
     orcid: 0000-0002-2204-8924
 date: 2 May 2024
-date-format: "D MMM YYYY"
+date-format: "DD MMM YYYY"
 image: frontpage.png
 categories:
   - Reusable
