--- a/pages/publications/monks2023a/index.qmd
+++ b/pages/publications/monks2023a/index.qmd
@@ -1,14 +1,11 @@
 ---
-title: "Computer model and code sharing practices in healthcare discrete-event simulation: a systematic scoping review"
-doi: https://doi.org/10.1080/17477778.2023.2260772
+title: "A framework to share healthcare simulations on the web using free and open source tools and Python"
+doi: http://doi.org/10.36819/SW23.030
 author:
   - name: Thomas Monks
     affiliation: University of Exeter Medical School
     orcid: 0000-0003-2631-4481
-  - name: Alison Harper
-    affiliation: University of Exeter Business School
-    orcid: 0000-0001-5274-5037
-date: "30 September 2023"
+date: 28 April 2023
 date-format: "DD MMM YYYY"
 image: frontpage.png
 categories:
@@ -17,7 +14,7 @@ categories:
 
 ## Abstract
 
-Discrete-event simulation (DES) is a widely used computational method in health services and health economic studies. This scoping review investigates to what extent authors share DES models and audits if sharing adheres to best practice. The Web of Science, Scopus, PubMed, and ACM Digital Library databases were searched between January 1 2019 till December 31 2022. Cost-effectiveness, health service research and methodology studies in a health context were included. Data extraction and audit were performed by two reviewers. We measured the proportion of literature that shared models; we report analyses by publication type, year of publication, COVID-19 application; and free and open source versus commercial software. Out of the 564 studies included, 47 (8.3%) cited a published computer model, rising to 9.0% in 2022. Studies were more likely to share models if they had been developed using free and open source tools. Studies rarely followed best practice when sharing computer models. Although still in the minority, healthcare DES authors are increasingly sharing their computer model artefacts. Although commercial software dominates the DES literature, free and open source software plays a crucial role in sharing. The DES community can adopt simple best practices to improve the quality of sharing.
+We present a simple framework to support sharing of executable healthcare discrete-event simulation models in python over the web. Our sharing framework is based on combining remote version control repositories with free and open source software – Jupyter Notebooks, Jupyter Books, and streamlit – along with free digital infrastructure provided by Binder, streamlit.io, GitHub pages, and open science repositories such as Zenodo. The framework enables executable models to be shared with users of different technical abilities: from coders to software literate users. We provide an applied example including a full web application of an executable model. Our framework aims to support NHS organisations to preview, validate, and use models. Academic research teams can also benefit from enhanced scrutiny of their work and long term archiving of models.
 
 ## Article
 
