--- a/pages/publications.qmd
+++ b/pages/publications.qmd
@@ -5,4 +5,6 @@ listing:
   sort: "date desc"
   categories: true
   fields: [image, date, title, author, categories]
+date: 3 December 2025
+published-title: Last updated
 ---
