--- a/pages/publications/2025/monks2025unlocking/index.qmd
+++ b/pages/publications/2025/monks2025unlocking/index.qmd
@@ -22,6 +22,26 @@ categories:
 
 Discrete-event simulation (DES) is widely used in healthcare Operations Research, but the models themselves are rarely shared. This limits their potential for reuse and long-term impact in the modelling and healthcare communities. This study explores the feasibility of using generative artificial intelligence (AI) to recreate published models using Free and Open Source Software (FOSS), based on the descriptions provided in an academic journal. Using a structured methodology, we successfully generated, tested and internally reproduced two DES models, including user interfaces. The reported results were replicated for one model, but not the other, likely due to missing information on distributions. These models are substantially more complex than AI-generated DES models published to date. Given the challenges we faced in prompt engineering, code generation, and model testing, we conclude that our iterative approach to model development, systematic comparison and testing, and the expertise of our team were necessary to the success of our recreated simulation models.
 
+## Research artefacts
+
+[View research summary page](/pages/llm_generate_des.qmd)
+
+### Research compendium
+
+**Website:** <https://pythonhealthdatascience.github.io/llm_simpy>
+
+**Code archive:** <https://doi.org/10.5281/zenodo.15090962>
+
+**GitHub:** <https://github.com/pythonhealthdatascience/llm_simpy>
+
+### Deployed models
+
+**Web app:** <https://pythonhealthdatascience.github.io/llm_simpy_models>
+
+**Code archive:** <https://doi.org/10.5281/zenodo.15082494>
+
+**GitHub:** <https://github.com/pythonhealthdatascience/llm_simpy_models>
+
 ## Article
 
 ```{=html}
