--- a/pages/publications/2025/heather2025reproducibility/index.qmd
+++ b/pages/publications/2025/heather2025reproducibility/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "On the reproducibility of discrete-event simulation studies in health research: an empirical study using open models"
-doi: https://doi.org/10.1080/17477778.2025.2552177
+doi: 10.1080/17477778.2025.2552177
 author:
   - name: Amy Heather
     affiliation: University of Exeter Medical School
