--- a/pages/eom_rcc.qmd
+++ b/pages/eom_rcc.qmd
@@ -1,3 +1,5 @@
 ---
-title: "Exeter Oncology Model: Renal Cell Carcinoma edition (EOM-RCC)"
+title: "Exeter Oncology Model: Renal Cell Carcinoma edition"
 ---
+
+Exeter Oncology Model: Renal Cell Carcinoma edition (EOM-RCC)
