--- a/pages/research.qmd
+++ b/pages/research.qmd
@@ -8,15 +8,15 @@ title: "Research"
 
 ```{=html}
 <br>
-<a href="computational_reproducibility.qmd" class="value-box pale small-title">
+<a href="research/computational_reproducibility.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-arrow-clockwise"></i></div>
   <div class="text">
     <div class="title">Computational reproducibility assessment of published DES models</div>
-    <div class="details">We attempted to reproduce eight published Python and R healthcare DES models. From this work, we developed the STARS Reproducibility framework for sharing reproducible healthcare DES models.</div>
+    <div class="details">We attempted to reproduce eight published Python and R healthcare DES models. From this work, we developed the STARS reproducibility recommendations for sharing reproducible healthcare DES models.</div>
   </div>
 </a>
 <br>
-<a href="des_rap_book.qmd" class="value-box pale small-title">
+<a href="research/des_rap_book.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-book"></i></div>
   <div class="text">
     <div class="title">DES RAP Book and four worked examples</div>
@@ -24,7 +24,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="jos_mri.qmd" class="value-box pale small-title">
+<a href="research/jos_mri.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-journal"></i></div>
   <div class="text">
     <div class="title">Journal of Simulation - Model Reproducibility Initiative</div>
@@ -32,7 +32,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="hdr_uk_futures.qmd" class="value-box pale small-title">
+<a href="research/hdr_uk_futures.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-person-workspace"></i></div>
   <div class="text">
     <div class="title">HDR UK Futures training materials</div>
@@ -47,7 +47,7 @@ title: "Research"
 
 ```{=html}
 <br>
-<a href="des_sharing_review.qmd" class="value-box pale small-title">
+<a href="research/des_sharing_review.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-bookmarks"></i></div>
   <div class="text">
     <div class="title">DES sharing review</div>
@@ -55,7 +55,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="stars_framework_reuse.qmd" class="value-box pale small-title">
+<a href="research/stars_framework_reuse.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-people"></i></div>
   <div class="text">
     <div class="title">STARS framework for model reuse</div>
@@ -63,7 +63,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="eom_rcc.qmd" class="value-box pale small-title">
+<a href="research/eom_rcc.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-capsule"></i></div>
   <div class="text">
     <div class="title">Exeter Oncology Model: Renal Cell Carcinoma edition</div>
@@ -78,7 +78,7 @@ title: "Research"
 
 ```{=html}
 <br>
-<a href="stress.qmd" class="value-box pale small-title">
+<a href="research/stress.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-card-checklist"></i></div>
   <div class="text">
     <div class="title">STRESS</div>
@@ -90,7 +90,7 @@ title: "Research"
 ## Other avenues of work
 
 ```{=html}
-<a href="model_reviews.qmd" class="value-box pale small-title">
+<a href="research/model_reviews.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-person-lines-fill"></i></div>
   <div class="text">
     <div class="title">Reviewing models to support authors in making their work reproducible and reusable</div>
@@ -98,7 +98,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="llm_generate_des.qmd" class="value-box pale small-title">
+<a href="research/llm_generate_des.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-robot"></i></div>
   <div class="text">
     <div class="title">Using LLMs to generate DES models</div>
@@ -106,7 +106,7 @@ title: "Research"
   </div>
 </a>
 <br>
-<a href="simtools.qmd" class="value-box pale small-title">
+<a href="research/simtools.qmd" class="value-box pale small-title">
   <div class="icon"><i class="bi bi-tools"></i></div>
   <div class="text">
     <div class="title">sim-tools</div>
