--- a/pages/research/eom_rcc.qmd
+++ b/pages/research/eom_rcc.qmd
@@ -3,3 +3,5 @@ title: "Exeter Oncology Model: Renal Cell Carcinoma edition"
 ---
 
 Exeter Oncology Model: Renal Cell Carcinoma edition (EOM-RCC)
+
+Page yet to be written!
